[package]
name = "comp-lib-rs"
version = "0.1.0"
authors = ["ukiyoyo <13175394+ukiyoyo@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
superslice = "=1.0.0"
itertools = "=0.8.2"
itertools-num = "=0.1.3"
